# rust-monkey

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: CI.yml  release.yml
src/: app.rs  cli.rs  main.rs
src/syntax/: lexer.rs  mod.rs  token.rs
